- [Bug 1106313]: device (port) strings cannot be unicode

Bugfixes (posix):

- [Patch 1043436] Fix for [Bug 1043420] (OSError: EAGAIN)
- [Patch 1102700] ``fileno()`` added
- ensure disabled PARMRK

Bugfixes (win32):

- [Patch 983106]: keep RTS/CTS state on port setting changes

New Features:

- ``dsrdtr`` setting to enable/disable DSR/DTR flow control independently
  from the ``rtscts`` setting. (Currenly Win32 only, ignored on other
  platforms)


Version 2.3     19 Jun 2008
---------------------------
New Features:

- iterator interface. ``for line in Serial(...): ...`` is now possible
  Sugested by Bernhard Bender

- ``sendBreak()`` accepts a ``duration`` argument. Default duration increased.

- win32 handles \\.\COMx format automatically for com ports of higher number
  (COM10 is internally translated to \\.\COM10 etc.)

- miniterm.py has a new feature to send a file (upload) and configurable
  special characters for exit and upload. Refactored internals to class based
  structure (upload and class refactoring by Colin D Bennett)

Bugfixes:

- [Bug 1451535] TCP/serial redirect example "--help"
- update VERSION variable
- update wxSerialConfigDialog.py and wxTerminal.py compatibility with
  wxPython 2.8 (Peleg)

Bugfixes (posix):

- [Bug 1554183] setRTS/setDTR refrence to nonexisting local "on"
- [Bug 1513653] file descriptor not closed when exception is thrown
- FreeBSD now uses cuadX instead of cuaaX (Patrick Phalen)
- Check for string in write function. Using uncode causes strange errors, this
  helps catching errors early (Tom Lynn)

Bugfixes (win32):

- [Bug 1520357] Handle leak
- [Bug 1679013] Ignore excpetion raised by SetCommTimeout() in close().
- [Bug 1938118] process hang forever under XP


Version 2.4     
---------------------------
New Features:
- [Patch 1616790] pyserial: Add inter-character timeout feature
Bugfixes:
Bugfixes (posix):
- [Bug 1783159] Arbitrary baud rates (Linux/Posix)
Bugfixes (win32):